--- a/site sport/css/style.css
+++ b/site sport/css/style.css
@@ -9,18 +9,19 @@
 body{
     background-image: url("https://emmafitnessgoal.com/wp-content/uploads/2020/02/14.jpg");
     background-size: cover;
+    background-repeat: no-repeat;
 }
 
-nav.navigation{
+
+.nav{
     display: flex;
     justify-content: space-between;
-    flex-wrap: nowrap;
     align-items: center;
     padding: 5px 20px;
     padding: 0px;
 }
 ul{
-    list-style-type: none;
+    list-style-type: none;   
 
 }
 
@@ -29,58 +30,81 @@ a{
     text-decoration: none;
     display: block;
     color: white;
+    font-size: 25px;
 
 }
+
 a:hover{
     text-decoration: underline;
     background-color: antiquewhite;
 }
 
-
-.gauche{
+.logo{
+    background-color: aqua;
     font-size: 50px;
     color: wh;
+    letter-spacing: 5px;
+    color: white;
     
 }
 
-.droite li , .gauche li{
+.nav-links{
     display: inline-block;
     color: white;
-
-}
-.droite li{
     padding: 25px;
 }
-/* mobile */
-.droite{
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    align-items: center;
+
+
+.burger{
+    display: none;
 }
 
-.bars{
-    background: #999;
-    display: inline-block;
-    height: 2px;
-    position: relative;
-    width: 18px;
+.burger{
+    background-color: white;
+    width: 25px;
+    height: 3px;
+    margin: 5px;
+    display: relative;
+    cursor: pointer;
 }
 
-.bars::before,.bars::after{
-    background: #999;
-    content:"";
-    display: inline-block;
-    height: 2px;
-    position: absolute;
-    width: 18px;
+@media screen  and (max-width:1448px) {
+    body{
+        overflow-x:hidden ;
+    }
+    ul{
+        list-style-type: none;
+        position: absolute;
+        right: 0px;
+        height: auto;
+        width: auto;
+        top: 0vh;
+        background-color: aqua; 
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        transform: translateX(100%);
+        transition: transform 0.5s ease-in;  
+    
+    }
+    ul li{
+        opacity: 0;
+    }
+    .burger{
+        display: block;
+    }
+   
+
+    .nav-active{
+        transform: translateX(0%);
+    }
+        
 }
-.bars::before{
-    top: 5px;
-}
-.bars::after{
-    top: -5px;
-}
+
+
+
+
+
 
 
 
